--- a/extra/35-mixing-html-and-webgl/src/index.html
+++ b/extra/35-mixing-html-and-webgl/src/index.html
@@ -12,8 +12,18 @@
 
     <div class="loading-bar"></div>
 
-    <div class="point point-0 visible">
+    <div class="point point-0">
         <div class="label">1</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+
+    <div class="point point-1">
+        <div class="label">2</div>
+        <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+
+    <div class="point point-2">
+        <div class="label">3</div>
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
     </div>
 
